--- a/src/components/LogViewer.css
+++ b/src/components/LogViewer.css
@@ -1,7 +1,7 @@
 .log-viewer {
   position: sticky;
   top: 2rem;
-  width: 400px;
+  width: 100%;
   max-height: calc(100vh - 4rem);
   overflow: hidden;
 }
@@ -60,6 +60,8 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
+  overflow: hidden;
+  box-sizing: border-box;
 }
 
 .log-card-header {
@@ -97,4 +99,12 @@
 .log-message {
   color: #fff;
   flex: 1;
+  word-wrap: break-word;
+  overflow-wrap: break-word;
+  white-space: normal;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
 }
